<resources>
    <string name="app_name">E-commerce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint" translatable="false">Name</string>
    <string name="first_instructive_string">Enter fields below to create an account</string>
    <string name="phone_hint" translatable="false">phone</string>
    <string name="email_address_hint" translatable="false">Email address</string>
    <string name="create_account_button_text">Create account</string>
    <string name="have_or_not_acc">Already have an account ?</string>
    <string name="sign_in_option">Sign in</string>
    <string name="second_instructive_string">Enter fields below to sign in</string>
    <string name="email_phone_hint" translatable="false">Email / phone</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="not_registered_yet">Not registered yet ?</string>
    <string name="sign_up_option">Sign up</string>
    <string name="address">%s</string>
    <string name="size_selection_text">SELECT SIZE</string>
    <string name="color_selection">SELECT COLOR</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="item_title">%s</string>
    <string name="item_price" translatable="false">USD 0</string>
    <string name="item_quantity_in_cart">Quantity :</string>
    <string name="buy_now_button_text">BUY NOW</string>
    <string name="add_my_new_address_button">Add address</string>
    <string name="update_password_button_text">Update password</string>
    <string name="item_quantity_in_checkout">0 item</string>
    <string name="shipping">Shipping</string>
    <string name="total_price">TOTAL</string>
    <string name="check_out_button_text">Check out</string>
    <string name="place_order_button_text">place order</string>
    <string name="third_instructive_string">Enter the new password</string>
    <string name="done_passowrd_change">Done</string>
    <string name="change_address_button_text">Cange address</string>
    <string name="continue_payment_button_text">Continue Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="see_more"><![CDATA[See more >]]></string>
    <string name="done_order">Done</string>
    <string name="track_your_order_text_button">Track your order</string>
    <string name="my_orders">My orders</string>
    <string name="my_addresses">My addresses</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="cart">Cart</string>
    <string name="push_notification">Push notification</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="share_app">Share app</string>
    <string name="contact_us">Contact us</string>
    <string name="description">Description</string>
    <string name="order_date">ORDER DATE</string>
    <string name="shipment_no">SHIPMENT NO.</string>
    <string name="about">About</string>
    <string name="address_number">Address %s</string>
    <string name="edit_profile">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="my_address_title">My addresses</string>
    <string name="no_items_found">your wishlist is empty</string>
    <string name="my_account_title">My Account</string>
    <string name="change_password_title">Change password</string>
    <string name="contact_us_title">Contact us</string>
    <string name="edit_title">Edit</string>
    <string name="my_orders_title">My orders</string>
    <string name="change_language_title">Change Language</string>
    <string name="save_changes_languages">save Changes</string>
    <string name="home_title">Home</string>
    <string name="deal_title">Deal</string>
    <string name="wish_list_title">My wishList</string>
    <string name="message_success_change_lang">Language Changed successfully</string>
    <string name="no_address">No address found</string>
    <string name="no_orders_text">No orders</string>
    <string name="no_addresses_found">No Addresses found</string>
    <string name="cart_title_text">CART</string>
    <string name="check_out_title">Check out</string>
    <string name="category">Category:</string>
    <string name="no_offer">No Offer</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
    <string name="best_seller">BEST SELLER</string>
    <string name="top_categories">TOP CATEGORIES</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="no_result_found_search">No result found</string>
    <string name="rate_this_product">rate this product?</string>
    <string name="what_lang">en</string>
    <string name="review">Review</string>
    <string name="my_address">My addresses</string>
    <string name="check_out">Check out</string>

</resources>
