<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/first_instructive_string"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_person_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_phone_android_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:maxLength="11"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="50dp"
                app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/signUp_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="#fff"
                android:text="@string/create_account_button_text"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/have_or_not_acc"
                />

                <TextView
                    android:id="@+id/signin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_option"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>
</FrameLayout>