<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SigninFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >


        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "Log in"
            android:textStyle="bold"
            android:textColor="@color/textColor_black"
            android:textSize="40sp"
            android:layout_marginBottom="50dp"
            /-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/second_instructive_string"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/ic_person_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_phone_hint"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="5dp"
                app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"

                />


            <Button
                android:layout_marginTop="50dp"

                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="#fff"
                android:text="@string/sign_in_button_text"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                />

                <!--<TextView

                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Or use FaceBook / Gmail"
                    android:textSize="18sp"
                    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/f"
                android:background="#3B5998"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                />
</LinearLayout>
-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_yet"
                    />

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_option"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</FrameLayout>