<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CashOnDeliveryFragment"
    android:background="#fff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:orientation="vertical"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/items_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/item_quantity_in_checkout"
            android:textColor="@color/textColor_black" />

        <TextView
            android:id="@+id/items_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="USD 0"
            android:textColor="@color/textColor_black"
            android:textSize="20sp"
            android:textStyle="bold"


            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/shipping"
            android:textColor="@color/textColor_black" />

        <TextView
            android:id="@+id/shipping_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="USD 0"
            android:textColor="@color/textColor_black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@color/textColor_black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/total_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/textColor_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="USD 0"
            android:textColor="@color/textColor_black"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>
        <Button
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/place_order_button_text"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_margin="50dp"
            android:textColor="#fff"

            />
    </LinearLayout>
</FrameLayout>