<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6">

        <TextView
            android:id="@+id/noproduct"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/your_cart_is_empty"
            android:textColor="@color/textColor_black"
            android:textSize="25sp" />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.CartFragment">


            <LinearLayout
                android:id="@+id/idd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SUBTOTAL"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/items_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/item_quantity_in_checkout"
                            android:textColor="@color/textColor_black" />

                        <TextView
                            android:id="@+id/items_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:text="USD 0"
                            android:textColor="@color/textColor_black"
                            android:textSize="20sp"
                            android:textStyle="bold"


                            />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/shipping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/shipping"
                            android:textColor="@color/textColor_black" />

                        <TextView
                            android:id="@+id/shipping_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="10dp"
                            android:text="USD 0"
                            android:textColor="@color/textColor_black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/textColor_black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/idi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp">

                        <TextView
                            android:id="@+id/total_price_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_price"
                            android:textColor="@color/textColor_black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp"
                            android:text="USD 0"
                            android:textColor="@color/textColor_black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idi">

                        <Button
                            android:id="@+id/checkout"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_alignParentBottom="true"
                            android:background="#000"
                            android:text="@string/check_out_button_text"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="20sp"

                            />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>
</ScrollView>
